[gd_scene load_steps=12 format=3 uid="uid://t6nkprm2joss"]

[ext_resource type="Script" path="res://agent.gd" id="1_vqwoa"]
[ext_resource type="Texture2D" uid="uid://byke4oirnpc1r" path="res://resources/character/Small-8-Direction-Characters_by_AxulArt.png" id="1_xtue8"]
[ext_resource type="Texture2D" uid="uid://boeuaenbnmwm7" path="res://resources/light_point.webp" id="2_3mmai"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8peq"]
size = Vector2(16, 32)

[sub_resource type="Animation" id="Animation_yr2k0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_um3tu"]
resource_name = "down"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 2), Vector2i(4, 3), Vector2i(4, 2), Vector2i(4, 1)]
}

[sub_resource type="Animation" id="Animation_2y40k"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(4, 2)]
}

[sub_resource type="Animation" id="Animation_03e10"]
resource_name = "left"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(6, 2), Vector2i(6, 1), Vector2i(6, 2), Vector2i(6, 3)]
}

[sub_resource type="Animation" id="Animation_apq2r"]
resource_name = "right"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 2), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_6schm"]
resource_name = "up"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(0, 3), Vector2i(0, 2), Vector2i(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qmb7q"]
_data = {
"RESET": SubResource("Animation_yr2k0"),
"down": SubResource("Animation_um3tu"),
"idle": SubResource("Animation_2y40k"),
"left": SubResource("Animation_03e10"),
"right": SubResource("Animation_apq2r"),
"up": SubResource("Animation_6schm")
}

[node name="agent" type="CharacterBody2D"]
modulate = Color(0.646029, 0.646029, 0.646029, 1)
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_vqwoa")

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("2_3mmai")
texture_scale = 0.46

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_xtue8")
offset = Vector2(0.475, -2.425)
hframes = 8
vframes = 12
frame = 24

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k8peq")

[node name="ray_down" type="RayCast2D" parent="."]
target_position = Vector2(0, 32)

[node name="ray_right" type="RayCast2D" parent="."]
target_position = Vector2(32, 0)

[node name="ray_left" type="RayCast2D" parent="."]
target_position = Vector2(-32, 0)

[node name="ray_up" type="RayCast2D" parent="."]
target_position = Vector2(0, -32)

[node name="animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qmb7q")
}
